# BroTraders

./: .gitignore  LICENSE  README.md  bracketorder-response.txt  ibkr_scanners.csv  install.ps1  pyproject.toml  tmp1.txt  tmp2.txt
DATA/: AEHR_1min_20260416_1531.csv  AMDL_1min_20260416_1531.csv  AMUU_1min_20260416_1531.csv  ASMU_1min_20260417_1356.csv  BOEU_1min_20260417_1356.csv  CCFE_1min_20260417_1356.csv  CDNA_1min_20260416_1531.csv  CRWL_1min_20260416_1531.csv  ELVR_1min_20260417_1356.csv  FORM_1min_20260417_1356.csv  HIMZ_1min_20260417_1356.csv  HLNE_1min_20260416_1531.csv  HOOG_1min_20260416_1531.csv  HYDR_1min_20260417_1356.csv  INOD_1min_20260416_1531.csv  IONL_1min_20260416_1531.csv  LIF_1min_20260417_1356.csv  LMNX_1min_20260417_1356.csv  MGRT_1min_20260416_1531.csv  MGRT_1min_20260417_1356.csv  MULL_1min_20260417_1356.csv  MUU_1min_20260417_1356.csv  NBTX_1min_20260417_1356.csv  NNE_1min_20260416_1531.csv  ORCX_1min_20260417_1356.csv  OSCX_1min_20260417_1356.csv  PDDL_1min_20260416_1531.csv  PLTU_1min_20260416_1531.csv  RKLB_1min_20260416_1531.csv  SATG_1min_20260417_1356.csv  SILC_1min_20260417_1356.csv  SOUX_1min_20260417_1356.csv  TARK_1min_20260417_1356.csv  TMDX_1min_20260417_1356.csv  TRAXV_1min_20260416_1531.csv  TSMX_1min_20260417_1356.csv  WDAY_1min_20260416_1531.csv  WWD_1min_20260417_1356.csv  XNDU_1min_20260416_1531.csv  strategy.json
DATA/2026-04-16-Run01/: ADBE_1min_20260416_1531.csv  AMDG_1min_20260416_1531.csv  APPX_1min_20260416_1531.csv  DDOG_1min_20260416_1531.csv  HIMZ_1min_20260416_1531.csv  IMOS_1min_20260416_1531.csv  JBHT_1min_20260416_1531.csv  KBDU_1min_20260416_1531.csv  NGHT_1min_20260416_1531.csv  OKTA_1min_20260416_1531.csv  ORCX_1min_20260416_1531.csv  PPIH_1min_20260416_1531.csv  QPUX_1min_20260416_1531.csv  RGTX_1min_20260416_1531.csv  SOUX_1min_20260416_1531.csv  TEAM_1min_20260416_1531.csv  XRPT_1min_20260416_1531.csv  results.json
DATA/2026-04-16-Run01-14-15/: APP_1min_20260416_1531.csv  BABX_1min_20260416_1531.csv  BIDU_1min_20260416_1531.csv  GDS_1min_20260416_1531.csv  HROW_1min_20260416_1531.csv  IONX_1min_20260416_1531.csv  IVSS_1min_20260416_1531.csv  LIF_1min_20260416_1531.csv  MDB_1min_20260416_1531.csv  MSFU_1min_20260416_1531.csv  NIOG_1min_20260416_1531.csv  NN_1min_20260416_1531.csv  RDTL_1min_20260416_1531.csv  REXC_1min_20260416_1531.csv  RKLX_1min_20260416_1531.csv  SGML_1min_20260416_1531.csv
DATA/2026-04-17-Run01-08-29/: AAOI_1min_20260417_0828.csv  AAPB_1min_20260417_0828.csv  AAPU_1min_20260417_0828.csv  ADV_1min_20260417_0828.csv  AEHR_1min_20260417_0828.csv  AFRM_1min_20260417_0828.csv  AIFD_1min_20260417_0828.csv  APPX_1min_20260417_0828.csv  ASMG_1min_20260417_0828.csv  ASMU_1min_20260417_0828.csv  BJRI_1min_20260417_0828.csv  CRWL_1min_20260417_0828.csv  DBVT_1min_20260417_0828.csv  ELVR_1min_20260417_0828.csv  (+37 more)
TODO/: bot_upgrade.md  fix.md  todo.md
brotools/: __init__.py  __main__.py  async_services.py  bot_session.py  config.py  data_manager.py  datacleaning.py  livestream.py  log_config.py  main.py  order_manager.py  protocols.py  risk_manager.py  services.py  strat_gap_rise.py  strategy_base.py  strategy_high_open_gap.py  strategy_runner.py  strategy_top_perc_gain.py  test_add_indicators.py  test_add_signals-notReady.py  test_get_data.py  test_get_report.py  test_place_orders.py  test_track_orders-v1.py  test_track_orders.py  track_orders-v1.py  track_orders.py  trade_signal.py  trading_indicators.py  trading_rules.py
brotoolsasync/: __main__.py  config.py
(+650 files in other folders)
