[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BroTraders"
version = "0.1.0"
description = "Simple tools for algorithmic trading using IBKR TWS API"
authors = [
    { name = "Robert Boivin", email = "your_email@example.com" },
    { name = "Marc Boivin", email = "grosplombs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    # "/TWS API/source/pythonclient", # This installs protobuf, which is a dependency of ibapi
    "pandas",
    "ib_async",
    "pytz"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]

[tool.hatch.build.targets.wheel]
packages = ["brotools"]

[project.scripts]
report = "brotools.__main__:getreport"
getdata = "brotools.__main__:getdata"
signals = "brotools.__main__:signals"
trade = "brotools.__main__:place_trade"
track = "brotools.__main__:track_portfolio"